Added api project and shared project, added entities, db constants, db context to api and enumerations to shared

--- a/FruitVegBasketMaui/FruitVegBasketMaui/FruitVegBasketMaui.csproj
+++ b/FruitVegBasketMaui/FruitVegBasketMaui/FruitVegBasketMaui.csproj
@@ -65,6 +65,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\FruitVegBasketMaui.Shared\FruitVegBasketMaui.Shared.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="Controls\Spacer.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
