--- a/FruitVegBasketMaui/FruitVegBasketMaui/FruitVegBasketMaui.csproj
+++ b/FruitVegBasketMaui/FruitVegBasketMaui/FruitVegBasketMaui.csproj
@@ -60,6 +60,7 @@
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="5.2.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Microsoft.UI.Xaml" Version="2.8.2" />
 	</ItemGroup>
