--- a/FruitVegBasketMaui/FruitVegBasketMaui/FruitVegBasketMaui.csproj
+++ b/FruitVegBasketMaui/FruitVegBasketMaui/FruitVegBasketMaui.csproj
@@ -70,6 +70,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Controls\CartControl.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Controls\ProductsListControl.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
