added categoriespage and prototype categoriesproductpage

--- a/FruitVegBasketMaui/FruitVegBasketMaui/FruitVegBasketMaui.csproj
+++ b/FruitVegBasketMaui/FruitVegBasketMaui/FruitVegBasketMaui.csproj
@@ -88,6 +88,9 @@
 	  <MauiXaml Update="Pages\CategoriesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\CategoryProductsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\HelpPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
